--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Bingo</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ajustes</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hola mundo!</string>
+    <string name="button_broadcaster">Locutor</string>
+    <string name="button_player">Jugador</string>
     <!-- -
         This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
