--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="action_settings">Ajustes</string>
 
     <string name="hello_world">Hola mundo!</string>
+    <string name="button_broadcaster">Locutor</string>
+    <string name="button_player">Jugador</string>
     <!-- -
         This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="title_activity_bingo">BingoActivity</string>
 </resources>
